updated ejs template

--- a/utils/invoiceTemplate.ejs
+++ b/utils/invoiceTemplate.ejs
@@ -161,7 +161,7 @@
   <div class="totals">
     <p>Round Off: ₹0.00</p>
     <p>Total: ₹<%= total.toFixed(2) %></p>
-    <p>Rupees <%= amountInWords %> Only. E & O.E.</p>
+    <p>Rupees <%= amountInWords %></p>
   </div>
 
   <div class="bank-details">
