col in daily hearing update

--- a/pdfTemplates/dailyHearingTemplate.ejs
+++ b/pdfTemplates/dailyHearingTemplate.ejs
@@ -88,9 +88,9 @@
                 <th>Client Name</th>
                 <th>Client Phone</th>
                 <th>Court</th>
-                <th>P/D</th>
+                <th>Prev Date</th>
                 <th>Time</th>
-                <th>Purpose</th>
+                <th>Purposem / stat</th>
                 <th>Next Date</th>
             </tr>
         </thead>
