invoice changes frontend and backend

--- a/pdfTemplates/dailyHearingTemplate.ejs
+++ b/pdfTemplates/dailyHearingTemplate.ejs
@@ -89,8 +89,8 @@
                 <th>Client Phone</th>
                 <th>Court</th>
                 <th>Prev Date</th>
-                <th>Time</th>
-                <th>Purposem / stat</th>
+                <th>Today Time</th>
+                <th>Purpose / status</th>
                 <th>Next Date</th>
             </tr>
         </thead>
