fixed hearing issue

--- a/pdfTemplates/invoiceTemplate.ejs
+++ b/pdfTemplates/invoiceTemplate.ejs
@@ -283,7 +283,7 @@
       <thead>
         <tr>
           <th style="width: 8%">Sr.</th>
-          <th style="width: 40%">Name</th>
+          <th style="width: 40%">Item</th>
           <th>Description of Services</th>
           <th style="width: 20%">Amount (INR)</th>
         </tr>
